--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,93 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Space+Grotesk:wght@500;700&display=swap');
+
+
+:root {
+  --black: rgb(21, 21, 21);
+  --light-blue: rgb(78, 225, 180);
+  --dark-grey: rgb(38, 38, 36);
+  --light-grey: rgb(217, 217, 217);
+  --white: rgb(255, 255, 255);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+body {
+  font-family: 'Space Grotesk', sans-serif;
+  background-color: var(--black);
+}
+
+
+.max-width-container {
+  max-width: 21.43rem;
+  margin: auto;
+}
+
+@media screen and (min-width:768px) {
+  .max-width-container {
+    max-width: 44.25rem;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+@media screen and (min-width:1200px) {
+  .max-width-container {
+    max-width: 60.75rem;
+  }
+}
+
+
+.heading {
+  font-weight: bold;
+  color: var(--white);
+}
+
+.body-text {
+  font-size: 1.125rem;
+  line-height: 1.75;
+  color: var(--light-grey);
+}
+
+
+.xl {
+  font-size: 5.5rem;
+  line-height: 5.5;
+  letter-spacing: -.156rem;
+}
+
+.L {
+  font-size: 3rem;
+  /* line-height: 3.5; */
+  letter-spacing: -.094rem;
+}
+
+.M {
+  font-size: 1.5rem;
+  line-height: 2;
+}
+
+.button {
+  text-decoration: underline var(--light-blue) 2px;
+  text-underline-offset: 10px;
+  color: var(--white);
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.uppercase {
+  text-transform: uppercase;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+img {
+  max-width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  img {
+    min-width: 20rem;
+    min-height: 15rem;
   }
 }
