added styling to about component

--- a/src/Components/Socials Container/SocialsContainer.css
+++ b/src/Components/Socials Container/SocialsContainer.css
@@ -1,9 +1,3 @@
-.socials-wrapper {
-    /* background-color: var(--dark-grey); */
-    /* padding: 5rem 0 1rem; */
-}
-
-
 .socials-container {
     display: flex;
     flex-direction: column;
@@ -24,7 +18,7 @@
 }
 
 
-.border-bottom {
+.border-top {
     border-top: 2px solid var(--light-grey);
     padding-top: 1rem;
 }
