--- a/src/App.css
+++ b/src/App.css
@@ -85,6 +85,7 @@ body {
   color: var(--white);
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .button:hover {
@@ -128,7 +129,7 @@ img {
 
 
 
-@media screen and (min-width:768px) {
+@media screen and (min-width:1200px) {
   .mobile-img {
     display: none;
   }
